Use java 21 convenience method